@@ -17,6 +17,8 @@
 ----------------------------------------------------------------------------------------------------------------------
 Version:
 Date:
+    Features:
+        - Apply productivity, speed, and consumption effects to recipes, and show them in tooltips.
     Fixes:
         - Building emission/absorption (pollution and spores) are displayed in tooltips again.
 ----------------------------------------------------------------------------------------------------------------------
